--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unc-cli",
   "version": "1.0.0",
-  "description": "A CLI to make it easier and faster to create project from gitlab template.",
+  "description": "A CLI to create project from gitlab group template.",
   "exports": "./main.js",
   "commandName": "unc",
   "bin": {
